  was essentially a clone of MultiTermQuery#CONSTANT_SCORE_REWRITE). It uses the new CONSTANT_SCORE_BLENDED_REWRITE
  by default, but can be overridden through the constructor. (Greg Miller)

* GITHUB#12175: Remove SortedSetDocValuesSetQuery in favor of TermInSetQuery with DocValuesRewriteMethod. (Greg Miller)

Optimizations
---------------------

* GITHUB#11900: BloomFilteringPostingsFormat now uses multiple hash functions
  in order to achieve the same false positive probability with less memory.
  (Jean-François Boeuf)

* GITHUB#12118: Optimize FeatureQuery to TermQuery & weight when scoring is not required. (Ben Trent, Robert Muir)

* GITHUB#12128, GITHUB#12133: Speed up docvalues set query by making use of sortedness. (Robert Muir, Uwe Schindler)

* GITHUB#12050: Reuse HNSW graph for intialization during merge (Jack Mazanec)

* GITHUB#12155: Speed up DocValuesRewriteMethod by making use of sortedness. (Greg Miller)

* GITHUB#12139: Faster indexing of string fields. (Adrien Grand)

* GITHUB#12179: Better PostingsEnum reuse in MultiTermQueryConstantScoreBlendedWrapper. (Greg Miller)

Bug Fixes
---------------------

* GITHUB#12158: KeywordField#newSetQuery should clone input BytesRef[] to avoid modifying provided array. (Greg Miller)

* GITHUB#12196: Fix MultiFieldQueryParser to handle both query boost and phrase slop at the same time.  (Jasir KT)

* GITHUB#12202: Fix MultiFieldQueryParser to apply boosts to regexp, wildcard, prefix, range, fuzzy queries.  (Jasir KT)

Build
---------------------

* GITHUB#12131: Generate gradle.properties from gradlew, if absent (Colvin Cowie, Uwe Schindler)

* GITHUB#12188: Building the lucene-core MR-JAR file is now possible without installing
  additionally required Java versions (Java 19, Java 20,...). For compilation, a special
  JAR file with Panama-foreign API signatures of each supported Java version was added to
  source tree. Those can be regenerated an demand with "gradlew :lucene:core:regenerate".
  (Uwe Schindler)
